# WeakSeq

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  schema.rs  sequencer.rs
crates/auction/: Cargo.toml
crates/auction/benches/: clearing.rs
crates/auction/src/: lib.rs  uniform.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/node/tests/: integration.rs
crates/types/: Cargo.toml
crates/types/src/: batch.rs  consensus.rs  error.rs  lib.rs  order.rs
monitoring/: README.md  docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: weakseq.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: alerts.yml  prometheus.yml
postman/: WeakSeq.postman_collection.json
