[package]
name = "weakseq-auction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Uniform-price batch auction clearing — MEV-free, deterministic, order-independent."

[lints]
workspace = true

[dependencies]
weakseq-types = { path = "../types" }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "clearing"
harness = false
