[package]
name = "weakseq-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WeakSeq node: composition root, batch sealing loop, GraphQL server."
default-run = "weakseq-node"

[lints]
workspace = true

[dependencies]
weakseq-types = { path = "../types" }
weakseq-auction = { path = "../auction" }
weakseq-consensus = { path = "../consensus" }
weakseq-api = { path = "../api" }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
