[package]
name = "weakseq-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain types for the WeakSeq block-less batch-auction sequencer."

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
